@@ -4,6 +4,7 @@ import org.apache.tools.ant.filters.ReplaceTokens
 plugins {
     id 'application'
     id 'java-library'
+    id 'java-test-fixtures'
     id 'maven-publish'
     id 'signing'
     id 'eclipse'
@@ -62,8 +63,16 @@ allprojects {
 
     javadoc {
         failOnError = false
-        (options as StandardJavadocDocletOptions).addBooleanOption("Xdoclint:none", true)
-        (options as StandardJavadocDocletOptions).addStringOption("Xmaxwarns", "1")
+        options {
+            jFlags('-Duser.language=en')
+            addStringOption('locale', 'en_US')
+            addStringOption('bottom', '<span>Copyright 2000-2023, OmegaT project and contributors</span>')
+            addStringOption('encoding', 'UTF-8')
+            addBooleanOption("Xdoclint:none", true)
+            addBooleanOption('html5', true)
+            addBooleanOption('frames', false)
+            addBooleanOption('public', true)
+        }
     }
     tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
@@ -116,6 +125,11 @@ sourceSets {
         resources {
             srcDir 'test/src'
             srcDir 'test/data'
+        }
+    }
+    testFixtures {
+        java {
+            srcDir 'test/fixtures'
         }
     }
     testIntegration {
@@ -274,7 +288,12 @@ dependencies {
     }
 
     // Test dependencies
-    testImplementation 'junit:junit:4.13.2'
+
+    testFixturesApi 'junit:junit:4.13.2'
+    // for http connection test
+    testFixturesApi 'com.github.tomakehurst:wiremock-jre8:2.35.0'
+    testFixturesImplementation 'commons-io:commons-io:2.11.0'
+
     testImplementation 'org.xmlunit:xmlunit-legacy:2.8.3'
     testImplementation("org.languagetool:languagetool-server:${languageToolVersion}") {
         exclude group: 'org.slf4j'
@@ -286,13 +305,12 @@ dependencies {
     }
     testRuntimeOnly "org.languagetool:language-pl:${languageToolVersion}"
     testRuntimeOnly "org.slf4j:slf4j-jdk14:1.7.32"
-    // http connection tests
-    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.0'
 
     // JAXB codegen only
     jaxb 'com.sun.xml.bind:jaxb-xjc:2.3.4'
 
     testIntegrationImplementation sourceSets.main.output, sourceSets.test.output
+    testIntegrationImplementation(testFixtures(project.rootProject))
     testIntegrationRuntimeOnly "org.slf4j:slf4j-jdk14:1.7.32"
 }
 
@@ -323,7 +341,6 @@ jar {
             }
         }
         pluginAttr('Dictionary driver[bundle]', 'org/omegat/core/dictionaries/', 'dictionary', desc.dictionary)
-        pluginAttr('MT connector[bundle]', 'org/omegat/core/machinetranslators/', 'machinetranslator', desc.machinetranslator)
         pluginAttr('File filters[bundle]', 'org/omegat/filters2/', 'filter', desc.filters2)
         pluginAttr('XML filters[bundle]', 'org/omegat/filters3/', 'filter', desc.filters3)
         pluginAttr('New XML filters[bundle]', 'org/omegat/filters4/', 'filter', desc.filters4)
@@ -637,6 +654,7 @@ macDistZip {
         condition(!macJRE.empty, 'JRE not found')
     }
     archiveFileName.set("${applicationName}_${project.version}${omtVersion.beta}_Mac.zip")
+    group = 'omegat distribution'
 }
 
 task macSignedDistZip(type: Zip) {
@@ -645,6 +663,7 @@ task macSignedDistZip(type: Zip) {
         into zipRoot
     }
     archiveFileName.set("${zipRoot}.zip")
+    group = 'omegat distribution'
 }
 
 task macNotarize {
@@ -664,6 +683,7 @@ task macNotarize {
                 '--file', inputs.files.singleFile
         }
     }
+    group = 'omegat distribution'
 }
 
 task macStapledNotarizedDistZip(type: Zip) {
@@ -678,16 +698,17 @@ task macStapledNotarizedDistZip(type: Zip) {
         }
     }
     archiveFileName.set("${zipRoot}.zip")
+    group = 'omegat distribution'
 }
 
 task mac(dependsOn: [macDistZip, macNotarize]) {
     description = 'Build the Mac distributions.'
-    group = 'distribution'
+    group = 'omegat distribution'
 }
 
 task linux(dependsOn: [linux64DistTar]) {
     description = 'Build the Linux distributions.'
-    group = 'distribution'
+    group = 'omegat distribution'
 }
 
 linux64DistTar {
@@ -742,7 +763,7 @@ ext.getInnoSetupCustomMessages = {
 
 task win {
     description = 'Build the Windows distributions.'
-    group = 'distribution'
+    group = 'omegat distribution'
 }
 
 ext.makeWinTask = { args ->
@@ -774,6 +795,10 @@ ext.makeWinTask = { args ->
         doFirst {
             delete "$destinationDir/jre"
             delete installerExe
+            exec {
+                commandLine 'chmod', '-R', 'a+w', 'build'
+                ignoreExitValue true
+            }
         }
         doLast {
             project.copy {
@@ -791,9 +816,6 @@ ext.makeWinTask = { args ->
                 filteringCharset = 'UTF-8'
             }
             exec {
-                commandLine 'chmod', '-R', 'a+w', 'build'
-            }
-            exec {
                 // You'd think we could just set the PATH, but there be dragons here
                 // https://github.com/palantir/gradle-docker/issues/162
                 def exe = exePresent('iscc') ?  'iscc' : file('ci/iscc')
@@ -808,6 +830,7 @@ ext.makeWinTask = { args ->
     def signedTaskName = "${args.name}Signed"
     def signedExe = "${distsDir}/${installerBasename}_Signed.exe"
     task(type: Exec, signedTaskName) {
+        group = 'omegat distribution'
         // You'd think we could just set the PATH, but there be dragons here
         // https://github.com/palantir/gradle-docker/issues/162
         // Starting from Nov 2022, certification provider force to use HSM to
@@ -953,7 +976,6 @@ task genMac {
 
 task changedOnBranch {
     description = 'List files that have been modified on this git branch.'
-    group = 'omegat workflow'
     doLast {
         ext.files = project.files(gitModifiedFiles())
         ext.files.each { println(it) }
@@ -1016,12 +1038,10 @@ tasks.jacocoTestCoverageVerification {
 
 task manualPdfs {
     description = 'Build PDF manuals for all languages. Requires Docker.'
-    group = 'omegat workflow'
 }
 
 task manualHtmls {
     description = 'Build HTML manuals for all languages. Requires Docker.'
-    group = 'omegat workflow'
 }
 
 ext.manualIndexXmls = fileTree(dir: 'doc_src', include: '**/OmegaTUsersManual_xinclude full.xml')
@@ -1061,16 +1081,14 @@ manualIndexXmls.each { xml ->
 
 task instantStartGuides {
     description = 'Build Instant Start guides for all languages. Requires Docker.'
-    group = 'omegat workflow'
 }
 
 task firstSteps {
     description = 'Build First Step pages for all languages. Requires Docker.'
-    group = 'omegat workflow'
 }
 
 task updateManuals {
-    group = 'omegat workflow'
+    group = 'omegat release'
     description = 'Update Instant Start guides and HTML manuals.'
     dependsOn manualHtmls, firstSteps, instantStartGuides
     finalizedBy genDocIndex
@@ -1108,13 +1126,16 @@ instantStartXmls.each { xml ->
     instantStartGuides.dependsOn taskName
 }
 
-
+tasks.getByName("run") {
+    jvmArgs(["--add-opens", "java.desktop/sun.awt.X11=ALL-UNNAMED"])
+}
 
 task debug(type: JavaExec) {
     description = 'Launch app for debugging.' // Special debug task for NetBeans
     group = 'application'
     mainClass = mainClassName
     classpath = sourceSets.main.runtimeClasspath
+    jvmArgs(["--illegal-access=warn"])
     debug true
 }
 
@@ -1125,6 +1146,7 @@ task runOnJava17(type: JavaExec) {
     }
     mainClass = application.mainClass
     classpath = sourceSets.main.runtimeClasspath
+    jvmArgs(["--add-opens", "java.desktop/sun.awt.X11=ALL-UNNAMED"])
     group = 'application'
 }
 
@@ -1225,6 +1247,7 @@ ext.publishAtomically = { args ->
     task("publish${args.name.capitalize()}") {
         description = "Copy ${args.name} to SourceForge web."
         dependsOn args.sourceTask
+        group = 'omegat release'
         doLast {
             ssh.run {
                 session(remotes.sourceforgeWeb) {
@@ -1254,7 +1277,7 @@ publishAtomically(name: 'javadoc', sourceTask: javadoc)
 
 task publishVersion {
     description = 'Update the version considered current by the version check.'
-    group = 'omegat workflow'
+    group = 'omegat release'
     doLast {
         ssh.run {
             session(remotes.sourceforgeWeb) {
